--- a/assets/css/MediaQ.css
+++ b/assets/css/MediaQ.css
@@ -1,6 +1,7 @@
 @media only screen and (max-width: 399px) {
     ul > li {
         display: none;
+
     }
 
     img.logo {
@@ -14,17 +15,44 @@
 
         position: relative;
         display: inline;
+
     }
 
     div.bannerImg > img {
-        width: 100%;
+        width: 99%;
         padding: 50px 0px 0px 0px;
         position: relative;
-        top: 140px;
+        top: 190px;
     }
 
     header {
         height: 39px;
+    }
+
+    .bannerSubText {
+
+        font-size: 14px;
+        position: relative;
+        padding: 0px 0px 0px 5%;
+        bottom: 32%;
+    }
+
+    .bannerText {
+        padding: 15% 0px 0px 5%;
+        font-size: 21px;
+        font-weight: 300;
+        width: 95%;
+        position: relative;
+        bottom: 35%;
+    }
+
+    .bannerBtn {
+
+        font-size: 10px;
+        padding: 10px 15px;
+        margin-left: 4%;
+        position: relative;
+        bottom: 29%;
     }
 }
 
@@ -32,9 +60,14 @@
     ul > li {
         display: inline;
         color: white;
-        font-size: 9px;
-        padding-right: 10px;
+        padding-right: 3%;
 
+    }
+
+    nav > ul.nav > li > a {
+        text-decoration: none;
+        color: white;
+        font-size: 0.8rem;
     }
 
     img.logo {
@@ -56,18 +89,160 @@
 
 }
 
+@media only screen and (min-width: 500px) {
+    ul > li {
+        padding-right: 5%;
+    }
+
+}
+
+
 @media only screen and (min-width: 650px) {
+    ul > li {
+        display: inline;
+        color: white;
+        padding-right: 6.5%;
+    }
+
+    nav > ul.nav > li > a {
+        text-decoration: none;
+        color: white;
+        font-size: 16px;
+    }
+
+    img.logo {
+        width: 86px;
+    }
+
+    div.headerLogo {
+        padding: 12px 0px 0px 15px;
+    }
+
+    header {
+        height: 45px;
+    }
+
+    div.bannerImg > img {
+        width: 55%;
+        padding: 100px 0px 0px 43%;
+    }
+
+
+
 
 }
 
 @media only screen and (min-width: 850px) {
+    ul > li {
+        display: inline;
+        color: white;
+        padding-right: 7.5%;
+    }
+
+    nav > ul.nav > li > a {
+        text-decoration: none;
+        color: white;
+        font-size: 19px;
+    }
+
+    div.headerLogo {
+        padding: 12px 0px 0px 15px;
+    }
+
+    img.logo {
+        width: 90px;
+    }
+
+    div.headerLogo {
+        padding: 12px 0px 0px 15px;
+    }
+
+    header {
+        height: 45px;
+    }
+
+    div.bannerImg > img {
+        width: 59%;
+        padding: 100px 0px 0px 40%;
+    }
 
 }
 
 @media only screen and (min-width: 1100px) {
+    ul > li {
+        display: inline;
+        color: white;
+        padding-right: 5.5%;
+        position: relative;
+        bottom: 12px;
+        right: 7%;
+    }
+
+    nav > ul.nav > li > a {
+        text-decoration: none;
+        color: white;
+        font-size: 22px;
+    }
+
+    div.headerLogo {
+        padding: 12px 0px 0px 15px;
+    }
+
+    img.logo {
+        width: 115px;
+    }
+
+    div.headerLogo {
+        padding: 10px 0px 0px 5%;
+    }
+
+    header {
+        height: 50px;
+    }
+
+    div.bannerImg > img {
+        width: 35%;
+        padding: 100px 0px 0px 63%;
+    }
+
 
 }
 
 @media only screen and (min-width: 1400px) {
+    ul > li {
+        display: inline;
+        color: white;
+        padding-right: 3.5%;
+        position: relative;
+        bottom: 12px;
+        right: 15%;
+    }
+
+    nav > ul.nav > li > a {
+        text-decoration: none;
+        color: white;
+        font-size: 22px;
+    }
+
+    div.headerLogo {
+        padding: 12px 0px 0px 15px;
+    }
+
+    img.logo {
+        width: 115px;
+    }
+
+    div.headerLogo {
+        padding: 10px 0px 0px 10%;
+    }
+
+    header {
+        height: 50px;
+    }
+
+    div.bannerImg > img {
+        width: 35%;
+        padding: 100px 0px 0px 45%;
+    }
 
 }
